kubernetes/pocservice.yaml
##################################################################################################
# webapp
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: webapp
  labels:
    app: webapp
    service: webapp
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: pocservice-webapp
      containers:
      - name: webapp
        image: ryogokacr.azurecr.io/webapp:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
##################################################################################################
# compute
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: compute
  labels:
    app: compute
    service: compute
spec:
  selector:
    app: compute
  ports:
  - name: http
    port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compute
  labels:
    app: compute
spec:
  replicas: 2
  selector:
    matchLabels:
      app: compute
  template:
    metadata:
      labels:
        app: compute
    spec:
      serviceAccountName: pocservice-compute
      containers:
      - name: compute
        image: ryogokacr.azurecr.io/compute:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
