kubernetes/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: pocservice-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pocservice
spec:
  hosts:
  - "*"
  gateways:
  - pocservice-gateway
  http:
  - route:
    - destination:
        host: webapp.ryogokpoc.svc.cluster.local
        port:
          number: 80
